--- a/v1/rom/protocol_subscriptions/index.html
+++ b/v1/rom/protocol_subscriptions/index.html
@@ -15,7 +15,7 @@
   <script src="/developer/assets/js/documentation.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="api">
 	<div id="header-wrapper">
   <div id="header">
     <div>
@@ -28,6 +28,15 @@
     </div>
   </div><!-- #header -->
 </div><!-- #header-wrapper -->
+
+	<div class="sub-nav">
+		<h2><a href="/developer/v1/">API</a></h2>
+
+		<ul>
+      <li><a href="/developer/v1/" class="active">Reference</a></li>
+      <li><a href="/developer/libraries/">Libraries</a></li>
+		</ul>
+	</div>
 
   <div id="wrapper">
   	<div class="content">
