--- a/v1/hl7/oru/index.html
+++ b/v1/hl7/oru/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title></title>
+  <title>HL7 2.4 ORU | RoQua Developer Docs</title>
   <link href="/developer/assets/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -30,7 +30,10 @@
 </div><!-- #header-wrapper -->
 
 	<div class="sub-nav">
-		<h2><a href="/developer/v1/">API</a></h2>
+		<h2>
+      HL7 2.4 ORU
+      <span class="status status-"></span>
+    </h2>
 
 		<ul>
       <li><a href="/developer/v1/" class="active">Reference</a></li>
@@ -40,9 +43,7 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<h1 id="hl7-24-oru">HL7 2.4 ORU</h1>
-
-<p>This document describes the types of ORU messages RoQua sends out. The list of
+    	<p>This document describes the types of ORU messages RoQua sends out. The list of
 examples when the ORUs are triggered are not exhaustive, and the given ORU-messages
 serve as examples. For details, please refer to the HL7 v2.4 specification.</p>
 
@@ -183,7 +184,6 @@ OBX|23|ST|mansa_20^MANSA v_20^L||||||||D|||201211201139
         <ul class="js-guides">
           <li><a href="/developer/v1/hl7/a19/">A19</a></li>
           <li><a href="/developer/v1/hl7/oru/">ORU</a></li>
-          <li><a href="/developer/v1/hl7/ports/">Ports</a></li>
         </ul>
       </li>
     </ul>
