--- a/v1/sso/completing_questionnaires/index.html
+++ b/v1/sso/completing_questionnaires/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title></title>
+  <title>Single Sign-On for Respondents | RoQua Developer Docs</title>
   <link href="/developer/assets/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -30,7 +30,10 @@
 </div><!-- #header-wrapper -->
 
 	<div class="sub-nav">
-		<h2><a href="/developer/v1/">API</a></h2>
+		<h2>
+      Single Sign-On for Respondents
+      <span class="status status-"></span>
+    </h2>
 
 		<ul>
       <li><a href="/developer/v1/" class="active">Reference</a></li>
@@ -40,9 +43,7 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<h1 id="single-sign-on-for-respondents">Single Sign-On for Respondents</h1>
-
-<p>The login for a patient (or other respondents for a dossier) is normally done by entering a token which the person has received by e-mail or snailmail. It’s also possible to open the login URL with this token prefilled as a query parameter, in which case the login will happen automatically and the person will be presented the first pending questionnaire immediately.</p>
+    	<p>The login for a patient (or other respondents for a dossier) is normally done by entering a token which the person has received by e-mail or snailmail. It’s also possible to open the login URL with this token prefilled as a query parameter, in which case the login will happen automatically and the person will be presented the first pending questionnaire immediately.</p>
 
 <h2 id="api-call">API Call</h2>
 
@@ -96,7 +97,6 @@ window or frame to navigate to:</p>
         <ul class="js-guides">
           <li><a href="/developer/v1/hl7/a19/">A19</a></li>
           <li><a href="/developer/v1/hl7/oru/">ORU</a></li>
-          <li><a href="/developer/v1/hl7/ports/">Ports</a></li>
         </ul>
       </li>
     </ul>
