--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title></title>
+  <title>RoQua API & Integrations | RoQua Developer Docs</title>
   <link href="/developer/assets/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -31,9 +31,7 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<h1 id="roqua-api--integrations">RoQua API &amp; Integrations</h1>
-
-<p>This repository contains an overview of the integrations and APIs that RoQua
+    	<p>This repository contains an overview of the integrations and APIs that RoQua
 provides.</p>
 
 <p>At some point, we might turn this into a nice website, but for now the standard
@@ -72,7 +70,6 @@ clearly versioned.</p>
         <ul class="js-guides">
           <li><a href="/developer/v1/hl7/a19/">A19</a></li>
           <li><a href="/developer/v1/hl7/oru/">ORU</a></li>
-          <li><a href="/developer/v1/hl7/ports/">Ports</a></li>
         </ul>
       </li>
     </ul>
