--- a/v1/rider/index.html
+++ b/v1/rider/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title></title>
+  <title>Technical Rider | RoQua Developer Docs</title>
   <link href="/developer/assets/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -30,7 +30,10 @@
 </div><!-- #header-wrapper -->
 
 	<div class="sub-nav">
-		<h2><a href="/developer/v1/">API</a></h2>
+		<h2>
+      Technical Rider
+      <span class="status status-DRAFT">DRAFT</span>
+    </h2>
 
 		<ul>
       <li><a href="/developer/v1/" class="active">Reference</a></li>
@@ -40,9 +43,7 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<h1 id="roqua-technical-rider-draft">RoQua Technical Rider [DRAFT]</h1>
-
-<p>In theater and musical performances, a technical rider is often used to document
+    	<p>In theater and musical performances, a technical rider is often used to document
 the various requests and demands in order to ensure that the performance can
 take place.</p>
 
@@ -69,11 +70,42 @@ will provide an IP on our end, so you can do the same. If you cannot provide
 this, we cannot check that the VPN is not silently failing, and hence, we will
 not be able to proactively contact you about problems.</p>
   </li>
-</ul><h2 id="hl7-traffic">HL7 Traffic</h2>
+</ul><h2 id="required-ports-on-the-vpn">Required ports on the VPN</h2>
 
-<p>TODO</p>
-
-<h2 id="web-application-monitoring">Web Application Monitoring</h2>
+<table>
+<thead><tr>
+<th>Number</th>
+      <th>Environment</th>
+      <th>Direction</th>
+      <th>Purpose</th>
+    </tr></thead>
+<tbody>
+<tr>
+<td><code>60201</code></td>
+      <td>Staging</td>
+      <td>From RoQua to you</td>
+      <td>HL7 A19 messages</td>
+    </tr>
+<tr>
+<td><code>60202</code></td>
+      <td>Staging</td>
+      <td>From RoQua to you</td>
+      <td>HL7 ORU messages</td>
+    </tr>
+<tr>
+<td><code>60401</code></td>
+      <td>Production</td>
+      <td>From RoQua to you</td>
+      <td>HL7 A19 messages</td>
+    </tr>
+<tr>
+<td><code>60402</code></td>
+      <td>Production</td>
+      <td>From RoQua to you</td>
+      <td>HL7 ORU messages</td>
+    </tr>
+</tbody>
+</table><h2 id="web-application-monitoring">Web Application Monitoring</h2>
 
 <p>TODO</p>
     </div>
@@ -109,7 +141,6 @@ not be able to proactively contact you about problems.</p>
         <ul class="js-guides">
           <li><a href="/developer/v1/hl7/a19/">A19</a></li>
           <li><a href="/developer/v1/hl7/oru/">ORU</a></li>
-          <li><a href="/developer/v1/hl7/ports/">Ports</a></li>
         </ul>
       </li>
     </ul>
