--- a/v1/rom/protocol_subscriptions/index.html
+++ b/v1/rom/protocol_subscriptions/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title>Protocol Subscriptions | RoQua ROM API</title>
+  <title>Protocol Subscriptions | RoQua Developer Docs</title>
   <link href="/developer/assets/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/developer/assets/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -30,7 +30,10 @@
 </div><!-- #header-wrapper -->
 
 	<div class="sub-nav">
-		<h2><a href="/developer/v1/">API</a></h2>
+		<h2>
+      Protocol Subscriptions
+      <span class="status status-"></span>
+    </h2>
 
 		<ul>
       <li><a href="/developer/v1/" class="active">Reference</a></li>
@@ -40,9 +43,7 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<h1 id="contents">Contents</h1>
-
-<ul id="markdown-toc">
+    	<ul id="markdown-toc">
 <li><a href="#authentication">Authentication</a></li>
   <li><a href="#start-a-protocol-subscription">Start a protocol subscription.</a></li>
 </ul><p>Manage protocol subscriptions for individual patients.</p>
@@ -140,7 +141,6 @@
         <ul class="js-guides">
           <li><a href="/developer/v1/hl7/a19/">A19</a></li>
           <li><a href="/developer/v1/hl7/oru/">ORU</a></li>
-          <li><a href="/developer/v1/hl7/ports/">Ports</a></li>
         </ul>
       </li>
     </ul>
