--- a/v1/hl7/oru/index.html
+++ b/v1/hl7/oru/index.html
@@ -43,7 +43,12 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<p>This document describes the types of ORU messages RoQua sends out. The list of
+    	<ul id="markdown-toc">
+<li><a href="#empty-response">Empty response</a></li>
+  <li><a href="#completed-response">Completed response</a></li>
+  <li><a href="#responses-that-can-no-longer-be-completed">Responses that can no longer be completed</a></li>
+  <li><a href="#responses-that-are-deleted">Responses that are deleted</a></li>
+</ul><p>This document describes the types of ORU messages RoQua sends out. The list of
 examples when the ORUs are triggered are not exhaustive, and the given ORU-messages
 serve as examples. For details, please refer to the HL7 v2.4 specification.</p>
 
