--- a/v1/sso/index.html
+++ b/v1/sso/index.html
@@ -45,13 +45,13 @@
   	<div class="content">
     	<p>There are multiple ways to automatically log a browser session into RoQua: as a patient, as a medical professional, as an admin. Several ways have a SSO option.</p>
 
-<h2 id="dossiers"><a href="/developer/v1/sso/patient_dossier/">Dossiers</a></h2>
+<h2 id="log-in-as-a-professional"><a href="/developer/v1/sso/patient_dossier/">Log in as a professional</a></h2>
 
-<p>To see the information for a given dossier.</p>
+<p>To see the information for a given dossier. To be implemented by EPD vendors.</p>
 
-<h2 id="completing-questionnaires"><a href="/developer/v1/sso/completing_questionnaires/">Completing Questionnaires</a></h2>
+<h2 id="log-in-to-fill-out-questionnaires"><a href="/developer/v1/sso/completing_questionnaires/">Log in to fill out questionnaires</a></h2>
 
-<p>If there are questionnaires prepared, can directly log in to let the user complete them.</p>
+<p>If there are questionnaires prepared, this can directly log in to let the user complete them. Intended for patient portals.</p>
     </div>
 
 		<div id="js-sidebar" class="sidebar-shell">
@@ -67,8 +67,8 @@
       <li class="js-topic">
         <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/sso/">Single Sign On</a></h3>
         <ul class="js-guides">
-          <li><a href="/developer/v1/sso/patient_dossier/">Dossiers</a></li>
-          <li><a href="/developer/v1/sso/completing_questionnaires/">Completing questionnaires</a></li>
+          <li><a href="/developer/v1/sso/patient_dossier/">Log in as professional</a></li>
+          <li><a href="/developer/v1/sso/completing_questionnaires/">Log in to fill out questionnaires</a></li>
         </ul>
       </li>
       <li class="js-topic">
