--- a/v1/authentication/index.html
+++ b/v1/authentication/index.html
@@ -43,9 +43,7 @@
 
   <div id="wrapper">
   	<div class="content">
-    	<h1 id="authentication">Authentication</h1>
-
-<p>To be determined.</p>
+    	<p>HTTP Basic authentication over SSL.</p>
     </div>
 
 		<div id="js-sidebar" class="sidebar-shell">
@@ -61,8 +59,8 @@
       <li class="js-topic">
         <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/sso/">Single Sign On</a></h3>
         <ul class="js-guides">
-          <li><a href="/developer/v1/sso/patient_dossier/">Dossiers</a></li>
-          <li><a href="/developer/v1/sso/completing_questionnaires/">Completing questionnaires</a></li>
+          <li><a href="/developer/v1/sso/patient_dossier/">Log in as professional</a></li>
+          <li><a href="/developer/v1/sso/completing_questionnaires/">Log in to fill out questionnaires</a></li>
         </ul>
       </li>
       <li class="js-topic">
