--- a/v1/rom/protocol_subscriptions/index.html
+++ b/v1/rom/protocol_subscriptions/index.html
@@ -44,15 +44,10 @@
   <div id="wrapper">
   	<div class="content">
     	<ul id="markdown-toc">
-<li><a href="#authentication">Authentication</a></li>
-  <li><a href="#start-a-protocol-subscription">Start a protocol subscription.</a></li>
+<li><a href="#start-a-protocol-subscription">Start a protocol subscription.</a></li>
 </ul><p>Manage protocol subscriptions for individual patients.</p>
 
-<h2 id="authentication">Authentication</h2>
-
-<ul>
-<li>Basic HTTP authentication</li>
-</ul><h2 id="start-a-protocol-subscription">Start a protocol subscription.</h2>
+<h2 id="start-a-protocol-subscription">Start a protocol subscription.</h2>
 
 <pre><code>POST /api/v1/protocol_subscriptions/
 </code></pre>
