--- a/v1/hl7/oru/index.html
+++ b/v1/hl7/oru/index.html
@@ -209,7 +209,7 @@ OBX|23|ST|mansa_20^MANSA v_20^L||||||||D|||201211201139
 
       <ul class="footer-cell">
         <li><a href="http://roqua.nl/contact">Contact</a></li>
-        <li><a href="https://roqua.zendesk.com/forums">Status</a></li>
+        <li><a href="https://roqua.zendesk.com">Status</a></li>
         <li><a href="https://roqua.zendesk.com/forums/20271351-Announcements">Release News</a></li>
       </ul>
     </div>
