--- a/v1/rider/index.html
+++ b/v1/rider/index.html
@@ -161,7 +161,7 @@ not be able to proactively contact you about problems.</p>
 
       <ul class="footer-cell">
         <li><a href="http://roqua.nl/contact">Contact</a></li>
-        <li><a href="https://roqua.zendesk.com/forums">Status</a></li>
+        <li><a href="https://roqua.zendesk.com">Status</a></li>
         <li><a href="https://roqua.zendesk.com/forums/20271351-Announcements">Release News</a></li>
       </ul>
     </div>
