--- a/v1/sso/patient_dossier/index.html
+++ b/v1/sso/patient_dossier/index.html
@@ -201,7 +201,7 @@ value-of-bar|value-of-foo|1359373315
 
       <ul class="footer-cell">
         <li><a href="http://roqua.nl/contact">Contact</a></li>
-        <li><a href="https://roqua.zendesk.com/forums">Status</a></li>
+        <li><a href="https://roqua.zendesk.com">Status</a></li>
         <li><a href="https://roqua.zendesk.com/forums/20271351-Announcements">Release News</a></li>
       </ul>
     </div>
