--- a/rom_v1/dossier/index.html
+++ b/rom_v1/dossier/index.html
@@ -48,6 +48,15 @@
   <div id="wrapper">
   	<div class="content">
     	
+<p>All API endpoints for dossier specific information and actions require a <code>dossier_id</code> parameter. When this parameter is blank, an HTTP unprocessable entity response code is returned:</p>
+
+<pre class="headers"><code>Status: 422 Unprocessable Entity</code></pre>
+
+<pre><code class="language-javascript"><span class="p">{</span>
+  <span class="s2">"errors"</span><span class="o">:</span> <span class="p">[</span>
+    <span class="s2">"Dossier id moet opgegeven zijn"</span>
+  <span class="p">]</span>
+<span class="p">}</span></code></pre>
     </div>
 
 		<div id="js-sidebar" class="sidebar-shell">
