--- a/rom_v1/rider/index.html
+++ b/rom_v1/rider/index.html
@@ -170,8 +170,9 @@ subsystems of RoQua. See <a href="/developer/rom_v1/global/service_health/">Serv
             <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/rom_v1/dossier/">Dossier-specific data</a></h3>
             <ul class="js-guides">
               <li><a href="/developer/rom_v1/dossier/dossiers/">Dossiers</a></li>
-              <li><a href="/developer/rom_v1/dossier/responses/">Responses</a></li>
+              <li><a href="/developer/rom_v1/dossier/fill_out_sessions/">Fill Out Sessions</a></li>
               <li><a href="/developer/rom_v1/dossier/protocol_subscriptions/">Protocol Subscriptions</a></li>
+              <li><a href="/developer/rom_v1/dossier/responses/">Responses</a></li>
             </ul>
           </li>
           <li class="js-topic">
