--- a/rom_v1/index.html
+++ b/rom_v1/index.html
@@ -48,6 +48,9 @@
   <div id="wrapper">
   	<div class="content">
     	<p>V1 documentation</p>
+
+
+<p>See the the items below ‘Overview’ on the right for general information on the ROM API.</p>
     </div>
 
 		<div id="js-sidebar" class="sidebar-shell">
