--- a/rom_v1/dossier/protocol_subscriptions/index.html
+++ b/rom_v1/dossier/protocol_subscriptions/index.html
@@ -162,7 +162,7 @@
 
 <h3 id="when-no-protocol-exists-with-the-protocolkey-provided">When no protocol exists with the <code>protocol_key</code> provided</h3>
 
-<pre class="headers no-response"><code>Status: 404 Not Found</code></pre>
+<pre class="headers"><code>Status: 422 Unprocessable Entity</code></pre>
 
 <pre><code class="language-javascript"><span class="p">{</span>
   <span class="s2">"errors"</span><span class="o">:</span> <span class="p">[</span>
